--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include README.rst
 recursive-include docs *
+include emencia/__init__.py
 recursive-include emencia/locale *
 recursive-include emencia/static *
 recursive-include emencia/templates *.html
